# redis-as-kv

./: MANIFEST.in  README-ko.md  README.md  pyproject.toml  redis_keyvault.py  requirements.txt  setup.py
app/: README.md  sample-kafka.py  sample-mariadb.py  sample-opensearch.py
etc/: DEPLOYMENT.md  GITHUB_RELEASE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  build-whl.cmd  clean-build.cmd  test-package.cmd
redis_keyvault/: __init__.py  redis_keyvault.py
redis_keyvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
samples/: README.md  sample-kafka.json  sample-mariadb.json  sample-opensearch.json  sample-proxysql.json
